Translate instructions into Japanese

--- a/src/templates/widget.html
+++ b/src/templates/widget.html
@@ -233,7 +233,7 @@
 
         <div class="data__check checkbox">
           <input type="checkbox" name="agree" id="agree">
-          <label for="agree">I accept <a href="#">Terms and Conditions</a></label>
+          <label for="agree"><a href="#">利用規約</a>に同意する</label>
         </div>
       </div>
     </div>
